# nju-poly

./: .env.example  .gitignore  .vercelignore  README.md  package.json  pnpm-lock.yaml  vercel.json
apps/api/: .env.example  .env.production.example  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260621_0001_goal4_ledger.py  20260621_0002_goal5_auth_users.py  20260621_0003_goal6_markets.py  20260621_0004_goal7_categories_review_media.py  20260622_0005_goal8_appeals.py  20260622_0006_goal9_api_tokens.py  20260622_0007_goal10_forum.py
apps/api/app/: main.py
apps/api/app/appeals/: models.py  router.py  service.py
apps/api/app/auth/: __init__.py  email.py  models.py  router.py  service.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/forum/: models.py  router.py  service.py
apps/api/app/ledger/: __init__.py  models.py  router.py  service.py
apps/api/app/markets/: models.py  router.py  service.py
apps/api/app/media/: __init__.py  service.py
apps/api/app/public_api/: router.py
apps/api/scripts/: generate_goal7_art.py  image_generation.py  verify_goal7_art.py
apps/api/tests/: conftest.py  test_admin_http_flows.py  test_auth.py  test_forum.py  test_health.py  test_ledger.py  test_markets.py  test_public_api.py
deploy/: api-migrate.sh  api-production-check.sh  api-start.sh  merge-production-env.mjs  nginx-api.conf.example  njupoly-api.service.example  server-bootstrap-local.sh  server-env.sh.example  server-preflight.sh  server-readiness.sh  set-production-env.mjs  (+1 more)
(+47 files in other folders)
