[project]
name = "njupoly-api"
version = "0.1.0"
description = "FastAPI backend for NJUPoly"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "certifi>=2026.6.17",
  "fastapi[standard]>=0.115.0",
  "pydantic-settings>=2.9.0",
  "python-dotenv>=1.1.0",
  "sqlalchemy[asyncio]>=2.0.40",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
